--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: icu_parser
 description: An extraction of icu parser from the intl_translation package
-version: 0.17.10+1
+version: 1.0.0
 homepage: https://github.com/sysint64/icu_parser.git
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  analyzer: '>=0.39.12 <0.40.0'
-  petitparser: ^3.0.0
+  analyzer: ^1.2.0
+  petitparser: ^4.0.2
 
 dev_dependencies:
