--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,16 @@
 name: icu_parser
 description: An extraction of icu parser from the intl_translation package
-version: 1.3.0
+version: 1.4.0
 homepage: https://github.com/sysint64/icu_parser.git
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
-  analyzer: ^4.3.0
+  analyzer: ^5.2.0
   petitparser: ^4.4.0
 
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  intl: ^0.18.1
